@@ -16,7 +16,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -100,7 +99,7 @@ public class ProjectSupervisorServiceImpl implements ProjectSupervisorService {
         List<ProjectToHomePageVO> data = projectsList
                 .stream()
                 .map(aux -> new ProjectToHomePageVO(aux.getProject(), aux.getAccepted(), aux.getReviewed()))
-                .collect(Collectors.toList());
+                .toList();
 
         return ServiceAnswer.builder().serviceMessage(ServiceMessage.OK).data(data).build();
     }
