@@ -10,7 +10,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -67,7 +66,7 @@ public class ProjectTribunalServiceGetProjects {
         List<ProjectToTribunalHomePageVO> data = listaProyectos
                 .stream()
                 .map(aux -> new ProjectToTribunalHomePageVO(aux.getProject(), aux.getDefensePoints(), aux.getAccepted(), aux.getReviewed()))
-                .collect(Collectors.toList());
+                .toList();
 
         return ServiceAnswer.builder().serviceMessage(ServiceMessage.OK).data(data).build();
     }
